updated Integer signature and version